cmake_minimum_required(VERSION 3.27)
project(compiti)

set(CMAKE_CXX_STANDARD 14)

add_executable(compiti
        01_Bosetti_VotiUniversitari.cpp
        03_Es1_Allegato.cpp
        03_Es2_Allegato.cpp
        "04_Introduzione ai Metodi.cpp"
        4.6.cpp
        BhoNonSoCheNumeroE'.cpp
        "Bosetti01_Perimetro Area Rettangolo.cpp"
        Bosetti06_FniRicorsive_fattoriale.cpp
        Bosetti_01_FunzioneSomma.cpp
        Bosetti_05_MediaTreNumeri_Rev1.cpp
        Bosetti_05_MediaTreNumeri_Rev2.cpp
        Bosetti_07_BinomioNewton.cpp
        Bosetti_07_FniRicorsive_Fibonacci_rev2.cpp
        Bosetti_09_MetodiPassPerIndirizzo_Rev02.cpp
        Bosetti_09_MetodiPassPerValore_01.cpp
        Bosetti_09_TriangoloTartaglia.cpp
        Bosetti_12_StampaInverso.cpp
        Bosetti_13_StampaInversoRev02.cpp
        Bosetti_14_ElementiIndiciPari.cpp
        Bosetti_15_Vettori_SommaMedia.cpp
        Bosetti_16_ShiftSempliceCircolare.cpp
        Bosetti_17_IndicePariDispari_Rev01.cpp
        Bosetti_17_IndicePariDispari_Rev02.cpp
        Bosetti_19_AlgoOrdinamento_01_SelectionSort.cpp
        Bosetti_4.7.cpp
        Bosetti_Es11_Rev01.cpp
        Bosetti_Es11_Rev02.cpp
        Bosetti_Es11_Rev03.cpp
        Bosetti_EsPag424_n36.cpp
        Bosetti_Gruppo1_NumeroPerfetto.cpp
        Bosetti_MinimoComuneMultiplo.cpp
        Bosetti_p14n3.cpp
        Bosetti_SommaCifre.cpp
        Bosetti_Triangolo.cpp
        Bosetti_TriangoloFloyd.cpp
        es1.cpp
        es2.cpp
        es3.cpp
        FniRicorsive_Rev1.cpp
        Bosetti_21_AlgoOrdinamento_02_BubbleSort.cpp
        Bosetti_21_AlgoOrdinamento_02_BubbleSort.cpp)
